# realtime-chat-tonic-rust-react-tf

proto/: chat.proto
server/: Cargo.toml
server/src/: client.rs  server.rs
server/src/services/: mod.rs
server/src/services/chat/: mod.rs
server/src/services/chat/functions/: connect.rs  connect_to_chat.rs  get_chat_messages.rs  mod.rs  send_message.rs
