[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }
futures = "0.3.24"
tokio-stream = "0.1.10"

[build-dependencies]
tonic-build = "0.7"
